--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,5 +13,21 @@
     border: none;
     text-transform: capitalize;
     transition: all .2s linear;
-
+}
+::selection{
+    background: var(--yellow);
+    color: #333;
+}
+html{
+    font-size: 62.5%;
+    overflow-x: hidden;
+}
+html::-webkit-scrollbar{
+    width: 1.4rem;
+}
+html::-webkit-scrollbar-track{
+    background: #222;
+}
+html::-webkit-scrollbar-thumb{
+    background: var(--yellow);
 }
