--- a/CSS/style.css
+++ b/CSS/style.css
@@ -56,6 +56,17 @@ section{
 .btn:hover{
     background: var(--yellow);
 }
+.heading{
+    text-align: center;
+    margin: 0 6rem;
+    font-size: 4rem;
+    padding: 1rem;
+    border-bottom: .1rem solid #fff4;
+    color: #fff;
+}
+.heading span{
+    color: var(--yellow);
+}
 header{
     position: fixed;
     top: 0;
@@ -139,11 +150,94 @@ header .navbar ul li a:hover{
     color: #eee;
     padding: 1rem 0;
 }
-
-
-
-
-
+.sobre .row{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 1rem 0;
+}
+.sobre .row .info{
+    flex: 1 1 48rem;
+    padding: 1rem 1rem;
+    padding-left: 6rem;
+}
+.sobre .row .info h3{
+    color: var(--yellow);
+    font-size: 2rem;
+    font-weight: normal;
+    padding: 1rem 0;
+}
+.sobre .row .info h3 span{
+    color: #fff;
+    padding: 0 .5rem;
+}
+.sobre .row .counter{
+    flex: 1 1 48rem;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.sobre .row .counter .box{
+    width: 20rem;
+    background: #333;
+    text-align: center;
+    padding: 2rem;
+    margin: 2rem;
+}
+.sobre .row .counter .box span{
+    font-size: 4rem;
+    color: var(--yellow);
+}
+.sobre .row .counter .box h3{
+    font-size: 2rem;
+    color: #fff;
+}
+.education .box-conteiner{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 1rem 0;
+    padding-left: 3rem;
+}
+.education .box-conteiner .box{
+    width: 27rem;
+    margin: 4rem 1rem;
+    padding-left: 4rem;
+    border-left: .2rem solid #fff;
+    position: relative;
+}
+.education .box-conteiner .box span{
+    font-size: 1.3rem;
+    background: #333;
+    color: #fff;
+    border-radius: 5rem;
+    padding: .5rem 2.5rem;
+}
+.education .box-conteiner .box h3{
+    font-size: 2rem;
+    color: #fff;
+    padding-top: 1.5rem;
+}
+.education .box-conteiner .box p{
+    font-size: 1.4rem;
+    color: #eee;
+    padding: 1rem 0;
+}
+.education .box-conteiner .box i{
+    position: absolute;
+    top: -1.5rem;
+    left: -2.5rem;
+    height: 5rem;
+    width: 5rem;
+    border-radius: 50%;
+    line-height: 5rem;
+    text-align: center;
+    font-size: 2rem;
+    color: #fff;
+    background: var(--yellow);
+}
 
 
 
@@ -179,5 +273,13 @@ header .navbar ul li a:hover{
     header{
         width: 100vw;
     }
-    
+    .heading{
+        margin: 0 3rem;
+    }
+    .sobre .row .counter .box{
+        width: 100%;
+    }
+    .education .box-conteiner .box{
+        width: 100%;
+    }
 }
