--- a/CSS/style.css
+++ b/CSS/style.css
@@ -312,6 +312,13 @@ header .navbar ul li a:hover{
     color: var(--yellow);
     padding-right: 1rem;
 }
+.top{
+    position: fixed;
+    bottom: 3.5rem;
+    right: 2rem;
+    z-index: 100;
+    display: none;
+}
 
 
 
